--- a/sectools/docker/x86_64/compose.yml
+++ b/sectools/docker/x86_64/compose.yml
@@ -11,26 +11,44 @@ services:
     #   - SYS_ADMIN
     command: >
       /bin/sh -c '
-        apt-get -y update &&
-        apt-get -y upgrade &&
+        if [ ! -e ~/.initialized ]; then
+          apt-get -y update &&
+          apt-get -y upgrade &&
 
-        groupadd -g 100 users -f &&
-        useradd -g users -u 1001 5ky12hm &&
+          groupadd -g 100 users -f &&
+          useradd -g users -u 1001 5ky12hm &&
 
-        apt-get -y install zsh &&
+          apt-get -y install \
+            zsh \
+            git \
+            curl \
+            wget \
+            xz-utils \
+            binutils \
+            file \
+            procps \
+            gcc \
+            make \
+            strace \
+            python3 \
+            python3-pip \
+            python3-dev \
+          &&
+            
+          apt-get -y install gdb qemu-user-static &&
+          echo 0 > /proc/sys/kernel/yama/ptrace_scope &&
 
-        apt-get -y install gdb &&
-        echo 0 > /proc/sys/kernel/yama/ptrace_scope &&
+          # commented out: cannot print running info
+          # ValueError: Argument 'count' should be greater than zero
+          # curl -qsL "https://install.pwndbg.re" | sh -s -- -t pwndbg-gdb &&
 
-        # commented out: cannot pwndbg with rosetta debug server
-        apt-get -y install qemu-user-static curl wget xz-utils &&
-        curl -qsL "https://install.pwndbg.re" | sh -s -- -t pwndbg-gdb &&
+          python3 -m pip install --break-system-packages --upgrade \
+            pip \
+            pwntools \
+          &&
 
-        # commented out: cannot gef with rosetta debug server
-        # apt-get -y install python3 binutils file procps &&
-
-        apt-get -y install binutils file procps gcc &&
-
+          touch ~/.initialized
+        fi
         tail -F /dev/null
       '
     volumes:
